--- a/Rocket News.html
+++ b/Rocket News.html
@@ -5,28 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&family=Poppins:wght@300&display=swap" rel="stylesheet">
     <title>RocketNews</title>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img id="logo" src="logo.svg" alt="">
-        </div>
-    </header>
     <main>
         <div class="box">
             <div class="itens" id="background">
+                <div class="logo">
+                    <img id="logo" src="logo.svg" alt="">
+                </div>
                 <form action="" id="form">
                     <label for="email">Insira o seu e-mail</label>
-                    <input type="email" name="" id="email">
+                    <input type="email" name="" id="email" placeholder="SeuEmail@Rocketseat.com">
                     <button type="submit"><img src="send.svg" alt=""></button>
                 </form>
+            <div id="texto">
+                <h1>atualize ideias e informações em 5 minutos.</h1>
+                <h2>tudo que você precisa saber para começar seu dia bem e informado</h2>
+                <span>notícias sobre o universo RocketSeat, e tudo que você precisa para começar o  dia melhor.<br> perfeito para se preparar para codar <img src="" alt=""></span>
             </div>
+            </div>
+            <a href="">deixe-me ir primeiro <img src="arrow-right.svg" alt=""></a>
             <img class="itens" id="news" src="read_news.jpg" alt="">
         </div>
     </main>
-    <footer>
-
-    </footer>
 </body>
 </html>
